# IDS_U3_Camera_ROS_Integration

./: CMakeLists.txt  README.md  package.xml
config/: rviz.rviz
include/: acquisitionworker.h  backend.h  imageitem.h
launch/: camera_launch.launch  distortion_correction.launch
src/: acquisitionworker.cpp  backend.cpp  imageitem.cpp  main.cpp  main.qml
